1.3-10
        - Crashes in some figures when chromosomes had a single observation.

1.3-9	2008-10-27
	- Changed call to changepoints of DNAcopy to allow usage with
	v. 1.17.0 and 1.16.0 of DNAcopy. (First noticed by Sean Davis,
	email 2008-10-07; later by Jian Li, email 2008-10-25).

1.3-8	2008-10-03
	- I finally included Henrik's suggestion for having GLAD
	as suggested.

1.3-7	2008-04-30
	- Changed call to changepoints (DNAcopy) to adapt to DNAcopy
	v. 1.13-3. 
	- Minor documentation fixes
	- Minor change to mpiInit (less annoying behavior).

1.3-6	2008-01-24
	- Bugs on sending to PaLS fixed.
	- Bug on radius of png regions for maps in figures

1.3-5	2007-11-28
	- mpiInit now takes another argument so that, by default R is NOT
	killed if mpiInit fails.

1.3-4	2007-09-25
	- Fixed a few help files (encoding and method usage) for new R
	versions.
	- Added citation.

1.3-3	2007-07-10
	- Fix bugs to allow handling a single chromosome with arbitrary 
	number

1.3-2	2007-06-27
	- Minor bug in some of the quit functions.

1.3-1	2007-05-14
	- Rmpi as "Suggests", not "Depends" since not needed for purely
	sequential operation, and leads to problems when installing as
	root (cannot lamboot as root)
	- Minor cleaning of other stuff

1.3	2007-04-25
	- Automatic recategorization of CGHseg states to three levels.
	- Parameterization of the S parameter for optimal penalization 
	  in CGHseg.
	- A little bit of CGHseg testing (compared to paper)

1.2-2	2007-04-24
	- Bug in CGHseg when k = 1

1.2	2007-04-05
	- Possibility of using either parallelization granularity
	with an "auto" option  based on  benchmarks (see our
	paper).

1.1	2007-03-29
	- Parallelization of BioHMM, HMM, DNAcopy, ACE over
	arrays * chromosomes for segmentation
	
1.0-1	2007-03
	- Much more extenssive testing and bug fixes

0.99	2007-01-15
	- Major changes in some existing code:
	  - parallelize PSW over arrays
	  - parallelize plotting code (chromosomes)
	- Added BioHMM, CGHseg (Piccard's), GLAD, HMM
