@@ -82,7 +82,9 @@ mpiInit <- function(wdir = getwd(), minUniverseSize = 15,
 
 
 pSegmentACE <- function(x, chrom.numeric, parall = "auto", ...) {
-    if (parall == "auto")
+  stop.na.inf(x)
+  stop.na.inf(chrom.numeric)
+  if (parall == "auto")
         parall <- ifelse(ncol(x) > 75, "axc", "chr")
     if (parall == "chr") {
         cat("\n    running chr version \n")
@@ -97,7 +99,9 @@ pSegmentACE <- function(x, chrom.numeric, parall = "auto", ...) {
 }
 
 pSegmentHMM <- function(x, chrom.numeric, parall = "auto", ...) {
-    if (parall == "auto") parall <- "arr"
+  stop.na.inf(x)
+  stop.na.inf(chrom.numeric)
+  if (parall == "auto") parall <- "arr"
     if (parall == "arr") {
         cat("\n    running arr version \n")
         return(pSegmentHMM_A(x, chrom.numeric, ...))
@@ -110,8 +114,8 @@ pSegmentHMM <- function(x, chrom.numeric, parall = "auto", ...) {
 
 
 pSegmentHMM_axc<- function(x, chrom.numeric, ...) {
-    nsample <- ncol(x)
-    nchrom <- unique(chrom.numeric)
+  nsample <- ncol(x)
+  nchrom <- unique(chrom.numeric)
     datalist <- list()
     klist <- 1
     for(i in 1:nsample) {
@@ -141,6 +145,9 @@ pSegmentHMM_axc<- function(x, chrom.numeric, ...) {
 
 
 pSegmentGLAD <- function(x, chrom.numeric, ...) {
+  stop.na.inf(x)
+  stop.na.inf(chrom.numeric)
+
     require("GLAD") || stop("Package not loaded: GLAD")
     out <- papply(data.frame(x),
                   function(z) gladWrapper(z,
@@ -157,6 +164,10 @@ pSegmentGLAD <- function(x, chrom.numeric, ...) {
 
 
 pSegmentBioHMM <- function(x, chrom.numeric, Pos, parall = "auto", ...) {
+  stop.na.inf(x)
+  stop.na.inf(chrom.numeric)
+  stop.na.inf(Pos)
+
     if (parall == "auto")
         parall <- ifelse(ncol(x) > 110, "arr", "axc")
     if (parall == "arr") {
@@ -219,6 +230,9 @@ pSegmentBioHMM_axc <- function(x, chrom.numeric, Pos, ...) {
 
 
 pSegmentCGHseg <- function(x, chrom.numeric, CGHseg.thres, ...) {
+  stop.na.inf(x)
+  stop.na.inf(chrom.numeric)
+
     ## Beware: we parallelize over subjects
  
 ##    nsample <- ncol(x)
@@ -259,7 +273,9 @@ pSegmentPSW <- function(x, chrom.numeric, common.data,
                         sign = -1,
                         nIter = 1000, prec = 100,  p.crit = 0.10,
                         name = NULL, ...) {
-    numarrays <- ncol(x)
+  stop.na.inf(chrom.numeric)
+  stop.na.inf(x)
+  numarrays <- ncol(x)
     ncrom <- length(unique(chrom.numeric))
     out <- list()
     ## out$Data
@@ -336,6 +352,9 @@ pSegmentWavelets <- function(x, chrom.numeric, mergeSegs = TRUE,
                              minDiff = 0.25,
                              minMergeDiff = 0.05,
                              thrLvl = 3, initClusterLevels = 10, ...) {
+  stop.na.inf(chrom.numeric)
+  stop.na.inf(x)
+
 ##     ncloneschrom <- tapply(x[, 1], chrom.numeric, function(x) length(x))
 ##     if((thrLvl == 3) & ((max(ncloneschrom) > 1096) | (min(ncloneschrom) < 21)))
 ##         warningsForUsers <-
@@ -413,6 +432,9 @@ pSegmentWavelets <- function(x, chrom.numeric, mergeSegs = TRUE,
 
 
 pSegmentDNAcopy <- function(x, chrom.numeric, parall = "arr", ...) {
+  stop.na.inf(chrom.numeric)
+  stop.na.inf(x)
+
     if (parall == "auto")
         parall <- ifelse(ncol(x) > 75, "arr", "axc")
     if (parall == "arr") {
@@ -499,6 +521,7 @@ pSegmentDNAcopy_axc <- function(x, chrom.numeric, smooth = TRUE,
         datalist[[i]]$logr <- x[, i]
         datalist[[i]]$pred <- matout0[, i]
     }
+    ### FIXME: eh???? we always merge here!!!!!
     out <- papply(datalist, function(z) ourMerge(z$logr, z$pred))
     outl <- list()
     outl$segm <- out
@@ -697,38 +720,43 @@ SegmentPlotWrite <- function(data, chrom,
     numarrays <- ncol(data)
     
     fseg <- get(paste("pSegment", method, sep = ""))
-    trythis <- try(
+    trySegment <- try(
                    segmres <- fseg(data, chrom,
                                    Pos = Pos,
                                    mergeSegs = mergeSegs, ...)
                    )
-    if(inherits(trythis, "try-error"))
-        caughtOurError(trythis)
+    seg1 <<- segmres
+    if(inherits(trySegment, "try-error"))
+        caughtOurError(trySegment)
     cat("\n\n Segmentation done \n\n")
 
     save.image()
     save(segmres, file = "segmres.RData")
 
-    trythis <- try(doMCR(segmres$segm, chrom.numeric = chrom,
+    tryMCR <- try(doMCR(segmres$segm, chrom.numeric = chrom,
                          data = data,
                          Pos = Pos, ...))
-    if(inherits(trythis, "try-error"))
-        caughtOurError(trythis)
-    
-    trythis <- try(segmentPlot(segmres,
+    if(inherits(tryMCR, "try-error"))
+        caughtOurError(tryMCR)
+    if(inherits(segmres, "DNAcopy") & (mergeSegs == FALSE)) {
+      class(segmres) <- c(class(segmres), "adacgh.generic.out")
+      warning("Forcing plotting of DNAcopy object with merge = FALSE.",
+              " But this might not be what you want.")
+    }
+    tryPlot <- try(segmentPlot(segmres,
                                geneNames = geneNames,
                                chrom.numeric = chrom,
                                cghdata = data,
                                idtype = idtype,
                                organism = organism))
-    if(inherits(trythis, "try-error"))
-        caughtOurError(trythis)
+    if(inherits(tryPlot, "try-error"))
+        caughtOurError(tryPlot)
     cat("\n\n Plotting done \n\n")
 
-    trythis <- try(writeResults(segmres,
+    tryWrite <- try(writeResults(segmres,
                                 data, commondata))
-    if(inherits(trythis, "try-error"))
-        caughtOurError(trythis)
+    if(inherits(tryWrite, "try-error"))
+        caughtOurError(tryWrite)
 }                                
 
 
@@ -4064,7 +4092,7 @@ pSegmentDNAcopy_A <- function(x, chrom.numeric, mergeSegs = TRUE, smooth = TRUE,
     outl <- list()
     outl$segm <- papout
     outl$chrom.numeric <- chrom.numeric
-    class(outl) <- "DNAcopy"
+    class(outl) <- "DNAcopy" ## why not adacgh.generic.out if not mergeSegs?? FIXME!!!
     if(mergeSegs) class(outl) <- c(class(outl), "adacgh.generic.out")
     return(outl)
 }
@@ -4246,3 +4274,113 @@ ACE_C <- function(x, Chrom, coefs = file.aux, Sdev=0.2, echo=FALSE) {
         res$chrom.numeric <- Chrom
  	invisible(res)
  }
+
+
+
+#### Utility functions
+
+stop.na.inf <- function(x) {
+  ## The code for many functions allows for dealing with NA and Inf, but
+  ## would need to adjust other functions (as different arrays would have
+  ## different length of pos, genenames, etc. So for now stop
+  if(any(is.na(x)) | any(is.infinite(x)))
+        stop("Either an NA or an infinite in the data: ",
+             deparse(substitute(x)), ".\n",
+             "   Eliminate those values or use imputation")
+}
+
+
+### Example of usage. Suppose we create missing values
+
+## cghE1[1:10, 5:7] <- NA
+## imputed.x <- my.impute.lowess(cghE1[1:40, 5:7], rep(1, 40))
+
+
+my.impute.lowess <- function (x,
+                              chrom.numeric,
+                              Clone = NULL,
+                              Pos = NULL,
+                              chrominfo = human.chrom.info.Jul03,
+                              maxChrom = 23,
+                              smooth = 0.1)
+{
+  ## BEWARE: Pos MUST be in kilobases!!!
+  if(is.null(Clone)) Clone <- 1:length(chrom.numeric)
+  if(is.null(Pos)) Pos <- Clone
+  aCGH.obj <- create.aCGH(data.frame(x),
+                          data.frame(Clone = Clone,
+                                     Chrom = chrom.numeric,
+                                     kb = Pos))
+  
+    data.imp <- log2.ratios <- log2.ratios(aCGH.obj)
+    clones.info <- clones.info(aCGH.obj)
+    uniq.chrom <- unique(clones.info$Chrom)
+    for (j in uniq.chrom[uniq.chrom <= maxChrom]) {
+        cat("Processing chromosome ", j, "\n")
+        centr <- chrominfo$centromere[j]
+        indl <- which(clones.info$Chrom == j & clones.info$kb <
+            centr)
+        indr <- which(clones.info$Chrom == j & clones.info$kb >
+            centr)
+        kbl <- clones.info$kb[indl]
+        kbr <- clones.info$kb[indr]
+        for (i in 1:ncol(log2.ratios)) {
+            if (length(indl) > 0) {
+                vecl <- log2.ratios[indl, i]
+                ind <- which(!is.na(vecl))
+                if (length(ind) > 1)
+                  data.imp[indl, i][-ind] <- approx(lowess(kbl[ind],
+                    vecl[ind], f = smooth), xout = kbl[-ind])$y
+            }
+            if (length(indr) > 0) {
+                vecr <- log2.ratios[indr, i]
+                ind <- which(!is.na(vecr))
+                if (length(ind) > 0)
+                  data.imp[indr, i][-ind] <- approx(lowess(kbr[ind],
+                    vecr[ind], f = smooth), xout = kbr[-ind])$y
+            }
+        }
+    }
+    prop.miss <- apply(data.imp, 2, prop.na)
+    if (max(prop.miss, na.rm = TRUE) > 0) {
+        for (i in 1:ncol(data.imp)) {
+            vec <- data.imp[, i]
+            ind <- which(is.na(vec))
+            if (length(ind) > 0) {
+                vec[ind] <- sapply(ind, function(i) {
+                  chr <- clones.info$Chrom[i]
+                  kb <- clones.info$kb[i]
+                  if (kb >= chrominfo$centromere[chr])
+                    median(vec[clones.info$Chrom == chr & clones.info$kb >=
+                      chrominfo$centromere[chr]], na.rm = TRUE)
+                  else median(vec[clones.info$Chrom == chr &
+                    clones.info$kb < chrominfo$centromere[chr]],
+                    na.rm = TRUE)
+                })
+                vec[is.na(vec)] <- 0
+                data.imp[, i] <- vec
+            }
+        }
+    }
+    prop.miss <- apply(data.imp, 2, prop.na)
+    if (max(prop.miss) > 0)
+        print(paste("Missing values still remain in samples ",
+            which(prop.miss > 0)))
+    data.imp
+}
+
+
+
+
+### Simple example of stochasticity of DNAcopy
+#set.seed(1)
+#cna.obj <- CNA(as.matrix(cghE1[, 5:7]),
+#               chrom = chrom.numeric,
+#               maploc = cghE1$UG.Start,
+#               data.type = "logratio")
+#smoothed <- smooth.CNA(cna.obj)
+#segmented1 <- segment(smoothed, undo.splits = "none", nperm = 10000)
+#segmented2 <- segment(smoothed, undo.splits = "none", nperm = 10000)
+#segmented3 <- segment(smoothed, undo.splits = "none", nperm = 10000)
+#segmented3$output[32:34, ]
+#segmented1$output[32:34, ]
